0.7.0.0:

  - Support version 0.9 of intern using conditional compilation in
    Data.Interned.URI (for ghc 7.4)

  - Switch to Control.Exception.try from System.IO.Error.try to avoid
    complaints from ghc 7.4.2

0.6.5.3:

  - Updated cabal file so that tests depend on the library rather
    than individual modules.

  - fix intern to 0.8 for ghc < 7.4 and 0.8.* for greater

0.6.5.2:

  - Upgrade polyparse upper limit to include version 1.8.

0.6.5.1:

  - Haddock fixes.

0.6.5.0:

  - Dependency updates (updated filepath and removed array).

0.6.4.0:

  - Added support for xsd:decimal with Swish.RDF.RDFDatatypeXsdDecimal
    and Swish.RDF.MapXsdDecimal thanks to William Waites
    (<https://bitbucket.org/ww>).

0.6.3.0:

  - Added Swish.RDF.Vocabulary.SIOC.

0.6.2.1:

  - hackage build fixes only

0.6.2.0:

  - Split out vocabularies into Swish.RDF.Vocabulary.DublinCore,
    Swish.RDF.Vocabulary.FOAF, Swish.RDF.Vocabulary.Geo,
    Swish.RDF.Vocabulary.OWL, Swish.RDF.Vocabulary.RDF, and
    Swish.RDF.Vocabulary.XSD (some of these are new and additional
    terms added to the pre-existing vocabularies). A few have also
    been added to Swish.RDF.RDFGraph.

  - Minimum Cabal version has been updated to 1.9.2 as the tests have
    been converted to take advantage of the support now in Cabal; this
    means that the tests flag has been replaced by the --enable-tests
    option.

  - Change to the internal labelling of the RDFS container-property
    axioms in Swish.RDF.RDFProofContext.

  - Moved src/ to app/, and took advantage of the emptiness to move
    the library code into src/.

0.6.1.2:

  - corrected mtl constraint from >= 1 to >= 2 as the code does not
    build with mtl=1 and increased the upper limit on time to 1.4.

0.6.1.1:

  - minor improvements to error message when parsing Turtle, N3 or
    Ntriples format; a fragment of the remaining text to be parsed is
    included to provide some context for the user (it is still not as